# boarding_simulator

./: CMakeLists.txt
include/Graphics/: graphics_object.h  movement.h  passenger.h  path.h  seat.h
include/Pathfinding/: astar.h  node.h
include/Plane/: passenger.h  plane.h
src/: main.cpp
src/Graphics/: graphics_object.cpp  movement.cpp  passenger.cpp  path.cpp  seat.cpp
src/Pathfinding/: astar.cpp  node.cpp
src/Plane/: passenger.cpp  plane.cpp
